@@ -1,6 +1,5 @@
 package net.minecraft.world.level.storage.loot.functions;
 
-import com.google.common.collect.ImmutableSet;
 import com.mojang.serialization.Codec;
 import com.mojang.serialization.DataResult;
 import com.mojang.serialization.MapCodec;
@@ -15,11 +14,11 @@ import net.minecraft.core.Holder;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.util.ExtraCodecs;
 import net.minecraft.util.RandomSource;
+import net.minecraft.util.context.ContextKey;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.enchantment.Enchantment;
 import net.minecraft.world.item.enchantment.EnchantmentHelper;
 import net.minecraft.world.level.storage.loot.LootContext;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParam;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParams;
 import net.minecraft.world.level.storage.loot.predicates.LootItemCondition;
 
@@ -60,13 +59,13 @@ public class ApplyBonusCount extends LootItemConditionalFunction {
 	}
 
 	@Override
-	public Set<LootContextParam<?>> getReferencedContextParams() {
-		return ImmutableSet.of(LootContextParams.TOOL);
+	public Set<ContextKey<?>> getReferencedContextParams() {
+		return Set.of(LootContextParams.TOOL);
 	}
 
 	@Override
 	public ItemStack run(ItemStack itemStack, LootContext lootContext) {
-		ItemStack itemStack2 = lootContext.getParamOrNull(LootContextParams.TOOL);
+		ItemStack itemStack2 = lootContext.getOptionalParameter(LootContextParams.TOOL);
 		if (itemStack2 != null) {
 			int i = EnchantmentHelper.getItemEnchantmentLevel(this.enchantment, itemStack2);
 			int j = this.formula.calculateNewCount(lootContext.getRandom(), itemStack.getCount(), i);
