@@ -1,10 +1,9 @@
 package net.minecraft.world.level.storage.loot.predicates;
 
-import com.google.common.collect.ImmutableSet;
 import com.mojang.serialization.MapCodec;
 import java.util.Set;
+import net.minecraft.util.context.ContextKey;
 import net.minecraft.world.level.storage.loot.LootContext;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParam;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParams;
 
 public class LootItemKilledByPlayerCondition implements LootItemCondition {
@@ -20,12 +19,12 @@ public class LootItemKilledByPlayerCondition implements LootItemCondition {
 	}
 
 	@Override
-	public Set<LootContextParam<?>> getReferencedContextParams() {
-		return ImmutableSet.of(LootContextParams.LAST_DAMAGE_PLAYER);
+	public Set<ContextKey<?>> getReferencedContextParams() {
+		return Set.of(LootContextParams.LAST_DAMAGE_PLAYER);
 	}
 
 	public boolean test(LootContext lootContext) {
-		return lootContext.hasParam(LootContextParams.LAST_DAMAGE_PLAYER);
+		return lootContext.hasParameter(LootContextParams.LAST_DAMAGE_PLAYER);
 	}
 
 	public static LootItemCondition.Builder killedByPlayer() {
