@@ -1,6 +1,5 @@
 package net.minecraft.world.level.storage.loot.predicates;
 
-import com.google.common.collect.ImmutableSet;
 import com.mojang.serialization.Codec;
 import com.mojang.serialization.MapCodec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
@@ -8,6 +7,7 @@ import java.util.Set;
 import net.minecraft.core.Holder;
 import net.minecraft.core.HolderLookup;
 import net.minecraft.core.registries.Registries;
+import net.minecraft.util.context.ContextKey;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.item.enchantment.Enchantment;
@@ -15,7 +15,6 @@ import net.minecraft.world.item.enchantment.EnchantmentHelper;
 import net.minecraft.world.item.enchantment.Enchantments;
 import net.minecraft.world.item.enchantment.LevelBasedValue;
 import net.minecraft.world.level.storage.loot.LootContext;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParam;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParams;
 
 public record LootItemRandomChanceWithEnchantedBonusCondition(float unenchantedChance, LevelBasedValue enchantedChance, Holder<Enchantment> enchantment)
@@ -35,12 +34,12 @@ public record LootItemRandomChanceWithEnchantedBonusCondition(float unenchantedC
 	}
 
 	@Override
-	public Set<LootContextParam<?>> getReferencedContextParams() {
-		return ImmutableSet.of(LootContextParams.ATTACKING_ENTITY);
+	public Set<ContextKey<?>> getReferencedContextParams() {
+		return Set.of(LootContextParams.ATTACKING_ENTITY);
 	}
 
 	public boolean test(LootContext lootContext) {
-		Entity entity = lootContext.getParamOrNull(LootContextParams.ATTACKING_ENTITY);
+		Entity entity = lootContext.getOptionalParameter(LootContextParams.ATTACKING_ENTITY);
 		int i = entity instanceof LivingEntity livingEntity ? EnchantmentHelper.getEnchantmentLevel(this.enchantment, livingEntity) : 0;
 		float f = i > 0 ? this.enchantedChance.calculate(i) : this.unenchantedChance;
 		return lootContext.getRandom().nextFloat() < f;
