@@ -1,14 +1,13 @@
 package net.minecraft.world.level.storage.loot.predicates;
 
-import com.google.common.collect.ImmutableSet;
 import com.mojang.serialization.MapCodec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
 import java.util.Optional;
 import java.util.Set;
 import net.minecraft.advancements.critereon.ItemPredicate;
+import net.minecraft.util.context.ContextKey;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.storage.loot.LootContext;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParam;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParams;
 
 public record MatchTool(Optional<ItemPredicate> predicate) implements LootItemCondition {
@@ -22,12 +21,12 @@ public record MatchTool(Optional<ItemPredicate> predicate) implements LootItemCo
 	}
 
 	@Override
-	public Set<LootContextParam<?>> getReferencedContextParams() {
-		return ImmutableSet.of(LootContextParams.TOOL);
+	public Set<ContextKey<?>> getReferencedContextParams() {
+		return Set.of(LootContextParams.TOOL);
 	}
 
 	public boolean test(LootContext lootContext) {
-		ItemStack itemStack = lootContext.getParamOrNull(LootContextParams.TOOL);
+		ItemStack itemStack = lootContext.getOptionalParameter(LootContextParams.TOOL);
 		return itemStack != null && (this.predicate.isEmpty() || ((ItemPredicate)this.predicate.get()).test(itemStack));
 	}
 
