@@ -1,14 +1,12 @@
 package net.minecraft.world.level.storage.loot.providers.nbt;
 
-import com.google.common.collect.ImmutableSet;
 import com.mojang.serialization.MapCodec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
 import java.util.Set;
-import javax.annotation.Nullable;
 import net.minecraft.nbt.Tag;
 import net.minecraft.resources.ResourceLocation;
+import net.minecraft.util.context.ContextKey;
 import net.minecraft.world.level.storage.loot.LootContext;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParam;
 
 public record StorageNbtProvider(ResourceLocation id) implements NbtProvider {
 	public static final MapCodec<StorageNbtProvider> CODEC = RecordCodecBuilder.mapCodec(
@@ -20,14 +18,13 @@ public record StorageNbtProvider(ResourceLocation id) implements NbtProvider {
 		return NbtProviders.STORAGE;
 	}
 
-	@Nullable
 	@Override
 	public Tag get(LootContext lootContext) {
 		return lootContext.getLevel().getServer().getCommandStorage().get(this.id);
 	}
 
 	@Override
-	public Set<LootContextParam<?>> getReferencedContextParams() {
-		return ImmutableSet.of();
+	public Set<ContextKey<?>> getReferencedContextParams() {
+		return Set.of();
 	}
 }
